GL/Projet_GL/src/test/deca/context/valid/cast/cast_upcast.deca
// Test : cast_upcast_explicit
// But : vérifier qu’un cast explicite B -> A (upcast) est accepté.
// Couvre : relation de sous-typage, conversion vers super-classe.
// Résultat attendu : compilation sans erreur.

class A {}
class B extends A {}

{
    B b;
    A a;

    b = new B();
    a = (A) (b);

}
